--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "jade": "0.20.0",
     "mongoose": "2.4.8",
     "socket.io": "0.8.7",
-    "mysql": "2.0.0-alpha9"
+    "mysql": "2.0.0-alpha9",
+    "JSONStream": "0.7.1"
   },
   "devDependencies": {
     "vows": "0.5.x",
